# Intrusion_Detection_System_IDS

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_LINUX.md  README_SSH.md  build.sh  build_all.sh  build_linux.sh  build_ssh.sh  clean_git.bat  deploy.bat  docker-compose.yml  dos.py  generate_test_traffic.sh  ids-ssh-service.md  ids-ssh.service  ids_log.txt  ids_log_20250327_113510.enc  launcher.sh  main.cpp  nmap_test.bat  resources.qrc  run_docker.bat  run_docker.sh  run_docker_mac.sh  run_linux.sh  run_ssh.sh  test_ids.py  test_traffic.py
build_ssh/: Intrusion_Detection_System_IDS_SSH
include/: ConsoleLogEncryption.h  DeviceManager.h  DeviceManagerConsole.h  MainWindow.h  PacketHandler.h  ServerCommandHandler.h  ServerSuspiciousIPModel.h  SimplePacketHandler.h  SuspiciousIPModel.h  ip_hdr.h  tcp_hdr.h
resources/: style.qss
src/: DeviceManager.cpp  DeviceManagerConsole.cpp  MainWindow.cpp  MainWindow.ui  PacketHandler.cpp  PacketHandler.h  ServerCommandHandler.cpp  ServerSuspiciousIPModel.cpp  SimplePacketHandler.cpp  SuspiciousIPModel.cpp  main.cpp  main_ssh.cpp
